--- a/Practice1/review/index.html
+++ b/Practice1/review/index.html
@@ -5,25 +5,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <link
-      href="https://fonts.googleapis.com/css?family=Lato:75,100,300,400,700,900"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lato:75,100,300,400,700,900" rel="stylesheet" />
+    <!-- 引用google字體 -->
+    <!-- <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'> -->
+    <!-- 後方參數可以替換為 Google Font Directory 上的任一字體） -->
+    <!-- 然後針對需要修改字體的段落加入 CSS 片段、如： -->
+    <!-- h1 { font-family: 'Yanone Kaffeesatz', arial, serif; } -->
 
-    <link rel="stylesheet" href="css/style.css" /> -->
+    <link rel="stylesheet" href="css/style.css" />
+
     <title>HTML+CSS Practice</title>
 </head>
+
 
 <body>
     <!-- NAVBAR -->
     <nav class="navbar">
+        <!-- HTML5新tag 具有語意 -->
         <div class="navbar__background">
             <div class="row">
                 <div class="navbar__nav">
                     <a href="#" class="navbar__title">
               HTML + CSS Practice
             </a>
-
                     <div class="navbar__list">
                         <a href="#anchor1" class="navbar__item">Typography</a>
                         <a href="#anchor2" class="navbar__item">Link and Input</a>
@@ -34,6 +38,8 @@
             </div>
         </div>
     </nav>
+
+
 
     <!-- HEADER -->
     <header class="header">
@@ -51,7 +57,7 @@
             <div class="row">Typography</div>
         </div>
         <div class="row">
-            <div class="section__body">
+            <div class="ｂsection__body">
                 <h1>This is a Heading (h1)</h1>
                 <h2>This is a Heading too! (h2)</h2>
                 <h3>This is also a Heading! (h3)</h3>
@@ -165,4 +171,4 @@
     </section>
 </body>
 
-</html>
+</html>ｂ
